# bq-health-optimizer-analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: bigquery_connector.py  main.py  tools.py
frontend/: index.html  script.js  style.css
